--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://prasadpreetish.github.io/QR-Code-generator",
   "name": "qrcode",
-  "homepage": "https://prasadpreetish.github.io/qr-code-generator",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
